# dataloader

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  install.sh  requirements.txt  setup.cfg  setup.py  test_catid_dataloader.py  update_pip.sh
provision/: EXAMPLE_run_all_hosts.txt  README.md  make_shard_script.py  run_all_hosts.sh  shard_dataset.py  test_dataloader.py
provision/ansible/: README.md  setup_repo.yml  test_install.py  test_install.yml
python_src/catid_dataloader/: __init__.py  catid_dataloader_wrapper.py
python_src/catid_dataloader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python_src/cpp_dataloader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: tokenized_data_prep.cpp
